@startuml
class User{
Long id
string username*
string email*
List<RoleType> roles
List<Apartment> apartments
List<Door> doors
List<EntryCode> entryCodes
}

enum RoleType{
TENANT
MANAGEMENT
GUEST
}

class Apartment {
long id
integer apartmentNumber
List<User> tenants
Lease currentLease
List<Lease> previousLeases
List<Door> doors
}



class Building {
Long id
List<Apartment> apartments
List<Door> doors
Set<Parking> parkings
}

class Door{
Long id
DoorStatus doorStatus
Set<DoorCode> doorCodes
Set<User> allowedToOpen
Apartment apartement
Building building
Parking parking
}

class Parking {
Long id
int numberOfGuestSpots
int numberOfTenantSpots
Set<Door> doors
Building building
}

enum DoorStatus{
LOCKED,
UNLOCKED,
OUT_OF_SERVICE
}

abstract class EntryCode {
Long id
User issuedBy
string code
ZonedDateTime expireDate
Door door
}

class DoorCode extends EntryCode {
}

class ParkingCode extends EntryCode {
string licensePlateNumber
}

class Lease {
ZonedDateTime startDate
ZonedDateTime endDate
DocStatus docStatus
Apartment apartement
}

enum DocStatus {
UNSIGNED,
REVIEW,
SIGNED
}



User "1" -- "1..3" RoleType : > has
Lease -- DocStatus
Lease -- Apartment
User "0..*" -- "0..*" Apartment : > lives is
Building "1" -- "1..*" Apartment : > has
Door "1..*" -- "0..1" Building : > belongs to
Door "1..*" -- "0..1" Apartment: > belongs to
Door "1" -- "1" DoorStatus : > has
Door "1..*" -- "1..*" EntryCode : > can be opened by
EntryCode "1..*" -- "1" User :  > issued by
User "0..*" -- "0..*" Door : > allowed to open
Building "0..1" -- "1..*" Parking : > has
Parking "0..1" -- "1" Door : < belongs to




@enduml


to do
- Parking permits
- Lease
- Locker system
